--- a/student.html
+++ b/student.html
@@ -1,3 +1,11 @@
 <!DOCTYPE html>
-    <h1>Hello World from <Thabang> (<2542228>)</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello World from Thabang(2542228)</title>
+</head>
+<body>
+    
+</body>
 </html>
