--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
-    <h1>Hello Wits</h1>
+<html>
+    <head></head>
+    <body>
+        <h1>Hello world</h1>
+    </body>
 </html>
-
